// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-0 el-deprecated-avatar"
    role="img"
    title="A profile image"
  >
    Some Content
  </div>
</DocumentFragment>
`;

exports[`Avatar component > should match a snapshot for an image src 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-0 el-deprecated-avatar"
    role="img"
    title="A profile image"
  >
    <img
      alt="An image with source https://picsum.photos/200"
      src="https://picsum.photos/200"
    />
  </div>
</DocumentFragment>
`;

exports[`Avatar component > should match a snapshot for an image type 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-1 el-deprecated-avatar el-deprecated-avatar-image el-deprecated-avatar"
    role="img"
    title="An avatar image"
  >
    <img
      alt="An image with source https://picsum.photos/200"
      src="https://picsum.photos/200"
    />
  </div>
</DocumentFragment>
`;
